--- a/style1.css
+++ b/style1.css
@@ -10,14 +10,36 @@ body {
     justify-content: center;
     flex-direction: column;
     align-items: center;
-    background: linear-gradient( 50deg, rgb(218 222 228),rgb(17, 109, 163));
     font-family: 'Franklin Gothic Medium', 'Arial Narrow', Arial, sans-serif;
+    background: linear-gradient(270deg, #51d3e4, #2493d4, #574bf8);
+    background-size: 600% 600%;
+    -webkit-animation: AnimationName 30s ease infinite;
+    -moz-animation: AnimationName 30s ease infinite;
+    animation: AnimationName 30s ease infinite;
+}
+@-webkit-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@-moz-keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
+}
+@keyframes AnimationName {
+    0%{background-position:0% 50%}
+    50%{background-position:100% 50%}
+    100%{background-position:0% 50%}
 }
 .location{
     height:30vh;
     width:50%;
     display:flex;
     justify-content:space-around;
+}
+.location h1{
+    font-size: 6vw;
 }
 .temperature{
     flex-direction:column;
@@ -29,8 +51,8 @@ body {
 }
 .degree-section span{
     margin:10px;
-    font-size:30px;
+    font-size:4vw;
 }
 .degree-section h2{
-    font-size:40px;
+    font-size:4vw;
 }
